Functional Authentication
Is a bit slow because the database authentication but is working well